--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,10 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "//#format-and-lint": {},
+    "//#format-and-lint:fix": {
+      "cache": false
     }
   }
 }
