--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,9 +16,12 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "5.8.3"
   }
 }
