--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,31 +1,41 @@
 {
   "languages": {
     "JavaScript": {
-      "language_servers": ["typescript-language-server", "!vtsls", "biome", "..."],
+      "language_servers": ["typescript-language-server", "biome", "!eslint", "!vtsls", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     },
     "TypeScript": {
-      "language_servers": ["typescript-language-server", "!vtsls", "biome", "..."],
+      "language_servers": ["typescript-language-server", "biome", "!eslint", "!vtsls", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     },
     "TSX": {
-      "language_servers": ["typescript-language-server", "!vtsls", "biome", "..."],
+      "language_servers": ["typescript-language-server", "biome", "!eslint", "!vtsls", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     },
     "JSON": {
-      "language_servers": ["biome", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     },
     "JSONC": {
-      "language_servers": ["biome", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     },
     "CSS": {
-      "language_servers": ["biome", "..."],
       "formatter": { "language_server": { "name": "biome" } }
     }
   },
+  "code_actions_on_format": {
+    "source.fixAll.biome": true
+  },
   "lsp": {
+    "typescript-language-server": {
+      "initialization_options": {
+        "preferences": {
+          "includePackageJsonAutoImports": "auto"
+        },
+        "tsserver": {
+          "path": "./node_modules/typescript/lib/tsserver.js"
+        }
+      }
+    },
     "biome": {
       "settings": {
         "config_path": "./biome.json"
