--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "next": "^15.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^2.1.0"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
