feat(database): Add database seeding functionality
- Add drizzle-seed package for generating test data
- Create seed script to populate parties, guests, events, and RSVPs
- Create reset script to clear database tables
- Add db:seed and db:seed:reset npm scripts
- Remove NODE_ENV check from database config to always load development env
- Generate 50 parties, 100 guests, 3 events, and RSVPs for all guest-event combinations

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,7 +13,9 @@
     "db:migrate": "drizzle-kit migrate",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull"
+    "db:pull": "drizzle-kit pull",
+    "db:seed": "tsx ./src/seed.ts",
+    "db:seed:reset": "tsx ./src/reset.ts"
   },
   "license": "ISC",
   "dependencies": {
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "drizzle-kit": "^0.31.5",
+    "drizzle-seed": "^0.3.1",
     "tsx": "^4.20.6",
     "typescript": "5.9.2"
   }
