--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,15 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
+    "tw-animate-css": "^1.4.0",
     "usehooks-ts": "^3.1.1"
   },
   "devDependencies": {
