feat(rsvp): Add complete RSVP feature

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -27,6 +27,18 @@
       "initialization_options": {
         "typescript": { "tsdk": "node_modules/typescript/lib" },
         "vtsls": { "autoUseWorkspaceTsdk": true }
+      },
+      "settings": {
+        "typescript": {
+          "preferences": {
+            "importModuleSpecifier": "non-relative"
+          }
+        },
+        "javascript": {
+          "preferences": {
+            "importModuleSpecifier": "non-relative"
+          }
+        }
       }
     },
     "biome": {
