--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "web",
+  "name": "@repo/web",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "NODE_OPTIONS=--inspect next dev --turbopack --port 3000",
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit"
@@ -12,14 +12,22 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@repo/database": "workspace:*",
     "@vercel/analytics": "^1.5.0",
+    "drizzle-orm": "^0.44.6",
+    "jose": "^6.1.0",
+    "lucide-react": "^0.553.0",
+    "neverthrow": "^8.2.0",
     "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
     "tw-animate-css": "^1.4.0",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
