--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--inspect next dev --turbopack --port 3000",
+    "dev": "NODE_OPTIONS=--inspect next dev --port 3000",
     "build": "next build",
     "start": "next start",
     "typecheck": "tsc --noEmit"
@@ -20,9 +20,9 @@
     "jose": "^6.1.0",
     "lucide-react": "^0.553.0",
     "neverthrow": "^8.2.0",
-    "next": "^15.5.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "next": "16.0.7",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.0",
@@ -34,10 +34,16 @@
     "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^24.3.0",
-    "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.9",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "5.9.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
