--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@upstash/redis": "^1.35.7",
     "@vercel/analytics": "^1.6.1",
     "jose": "^6.1.3",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.556.0",
     "neverthrow": "^8.2.0",
     "next": "16.0.7",
